--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,18 @@ body {
 .cart-main {
   padding-right: 30px;
 }
+/* rating   */
+.rating{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+}
+.rating-color{
+  color: rgb(199, 180, 7);
+  font-weight: bolder;
+
+}
+
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
