--- a/css/style.css
+++ b/css/style.css
@@ -3,27 +3,32 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 .search-field {
-  border: none;
-  border-radius: 50px;
+  width:500px;
+  border-radius: 5px;
   padding: 5px;
   outline: none;
+  border: 1px solid rgb(192, 192, 192);
+  margin-right: 10px;
 }
-.search-field:hover {
-  outline: none;
-  border: none;
-}
+
 .search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
+  display: flex;
+  justify-content: center;
+  margin:  50px 0px;
+
 }
 .search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
+  padding: 6px 50px;
+  border-radius: 5px;
+  outline: none;
+  background-color: rgb(3, 124, 124);
+  color: white;
+  border: none;
+
+}
+.search-button:hover{
+  background-color: rgb(5, 90, 90);
+
 }
 #all-products {
   display: grid;
