--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,20 @@ body {
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  
   /* border: 1px solid black; */
   text-align: center;
   width: 100%;
   margin: auto;
   align-items: center;
   justify-content: center;
+}
+.product{
+  background-color: rgb(0, 143, 143);
+  border-radius: 15px;
+  color: white;
+  margin-left: 30px;
 }
 .single-product {
   padding: 10px;
@@ -72,7 +80,7 @@ body {
   margin-bottom: 10px;
 }
 .rating-color{
-  color: rgb(199, 180, 7);
+  color: rgb(255, 245, 155);
   font-weight: bolder;
 
 }
