--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
+  grid-gap: 20px 0px;
   
   /* border: 1px solid black; */
   text-align: center;
@@ -47,15 +47,16 @@ body {
   border-radius: 15px;
   color: white;
   margin-left: 30px;
+  height: 450px;
 }
-.single-product {
+.product {
   padding: 10px;
   transition: 0.6s;
 }
-.single-product:hover {
+.product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid rgb(4, 223, 223);
 }
 .product-image {
   width: 150px;
