--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+/* search and button style  */
 .search-field {
   width:500px;
   border-radius: 5px;
@@ -30,6 +31,8 @@ body {
   background-color: rgb(5, 90, 90);
 
 }
+/* products display style  */
+
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -42,6 +45,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+/* single product style  */
 .product{
   background-color: rgb(0, 143, 143);
   border-radius: 15px;
@@ -62,6 +66,9 @@ body {
   width: 150px;
   height: 150px;
 }
+
+/* cart style  */
+
 .cart {
   width: 350px;
   /* border: 1px solid green; */
@@ -74,6 +81,7 @@ body {
 .cart-main {
   padding-right: 30px;
 }
+
 /* rating   */
 .rating{
   display: flex;
